# airline

./: .gitignore  .gitmodules  airline  airline.cabal  ideas  stack.yaml  todo
data/: airport_cities.json  airports.json  airports_filtered.json  airports_without_cities.py  cities.json  filter_airports.py  gen.py  gen_airports.py  gen_cities.py  link.py
doc/: ideas  todo
src/: CLI.hs  Command.hs  CrossMap.hs  Demo.hs  Game.hs  GlobalState.hs  Id.hs  Main.hs  Message.hs  Object.hs  Parallel.hs  Server.hs  Simulation.hs  Types.hs  View.hs  WebSockets.hs
src/CLI/: Output.hs
src/Command/: BuyAircraft.hs  ChangeFlight.hs  Monad.hs  RemoveFlight.hs  SetFlight.hs  ShowAllAircraft.hs  ShowAllAirports.hs  Simple.hs  Util.hs
src/Types/: Comm.hs  Command.hs  State.hs  Time.hs
static/: classy.js  index.html  main.js  require.js  server.js  test.html  ws.js
