name:           airline
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2014 Karl Voelker
author:         Karl Voelker
maintainer:     airline@karlv.net
stability:      experimental
bug-reports:    mailto:airline@karlv.net
synopsis:       Airline simulator
category:       Game

Executable airline
  main-is:          Main.hs
  other-modules:
    CLI
    CrossMap
    Game
    Id
    Simulation
    Types
    Types.Command
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
    -feager-blackholing
    -threaded
    -with-rtsopts=-N
  build-depends:
    base                 >= 4    && < 5,
    SafeSemaphore        >= 0.9  && < 0.11,
    bytestring           >= 0.10 && < 0.11,
    containers           >= 0.4  && < 0.6,
    haskeline            >= 0.7  && < 0.8,
    hydrogen             >= 0.4  && < 0.5,
    lens                 >= 4.13 && < 4.14,
    mtl                  >= 2.1  && < 2.3,
    stm                  >= 2.4  && < 2.5,
    text                 >= 1.2  && < 1.3,
    time                 >= 1.4  && < 1.7
  default-extensions:
    NoImplicitPrelude
    TupleSections
    ScopedTypeVariables
    FlexibleInstances
    FlexibleContexts
    GADTs
    DataKinds
    LambdaCase
    OverloadedStrings
    ViewPatterns
    RecordWildCards
  other-extensions:
    TemplateHaskell
