name:           airline
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2014 Karl Voelker
author:         Karl Voelker
maintainer:     airline@karlv.net
stability:      experimental
bug-reports:    mailto:airline@karlv.net
synopsis:       Airline simulator
category:       Game

Executable airline
  main-is:          Main.hs
  other-modules:
    CLI
    CLI.Output
    Command
    Command.BuyAircraft
    Command.ChangeFlight
    Command.Monad
    Command.RemoveFlight
    Command.ShowAllAircraft
    Command.ShowAllAirports
    Command.Simple
    Command.Util
    CrossMap
    Demo
    Game
    Object
    Parallel
    Simulation
    Types
    Types.Time
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
    -feager-blackholing
    -threaded
    -with-rtsopts=-N
  build-depends:
    base                 >= 4    && < 5,
    SafeSemaphore        >= 0.9  && < 0.11,
    applicative-parsec   >= 0.1  && < 0.2,
    bytestring           >= 0.10 && < 0.11,
    containers           >= 0.4  && < 0.6,
    haskeline            >= 0.7  && < 0.8,
    hydrogen             >= 0.4  && < 0.5,
    lens                 >= 4.13 && < 4.14,
    monad-stm            >= 0.1  && < 0.2,
    mtl                  >= 2.1  && < 2.3,
    operational          >= 0.2  && < 0.3,
    random               >= 1.1  && < 1.2,
    stm                  >= 2.4  && < 2.5,
    text                 >= 1.2  && < 1.3,
    time                 >= 1.4  && < 1.7,
    transformers         >= 0.4  && < 0.5,
    vector               >= 0.11 && < 0.12
  default-extensions:
    DataKinds
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    ViewPatterns
  other-extensions:
    TemplateHaskell
